--- a/labs/labfp/cs440S2014-fp.tex
+++ b/labs/labfp/cs440S2014-fp.tex
@@ -1,79 +1,26 @@
-%!TEX root=cs440S2014-lab7.tex 
-% mainfile: cs440S2014-lab7.tex 
+%!TEX root=cs440S2014-fp.tex 
+% mainfile: cs440S2014-fp.tex 
 
 \input{labspre.tex}
 
 \usepackage[compact]{titlesec}
 
-\begin{document} \MYTITLE{Laboratory Assignment Seven: Evaluating the Efficiency of File System Searching}
-\MYHEADERS{Laboratory Assignment Seven}{Due: April 7, 2014}
+\begin{document} \MYTITLE{Final Project: Advanced Topics in Operating Systems} 
+\MYHEADERS{Final Project}{Due: Thursday, May 1, 2014 at 7:00 pm}
 
 % \vspace*{-.32in}
 
 \section*{Introduction}
 
-Since most software applications ultimately need to store and retrieve information, it is essential that an operating
-system  provide a file system to support these activities.  It is also important to ensure that application programs
-effectively use the primitives provided by the file system.  In this laboratory assignment, we will explore and
-experimentally evaluate two file system searching tools, {\tt grep} and {\tt ag}. One of the tools that we will study,
-{\tt grep}, was first implemented years ago by Ken Thompson, one of the creators of Unix.  The second tool, known as
-{\tt ag} or the ``Silver Searcher'', is a new tool for file system searching. As part of this assignment, you will learn
-the command lines associated with both of these tools and then design a benchmarking framework to determine which one is
-faster.  Finally, you will explore at least one advanced application of these tools.
+Throughout the semester, you have learned more about the basics of operating systems by studying, in a hands-on fashion,
+topics such as file systems, process scheduling, and memory management.  In this final project, you will explore in
+greater detail an advanced topic in the field of operating systems.
 
-\section*{File System Searching with {\tt grep}, {\tt ag}, and {\tt nautilus}}
+\section*{Description of the Topics}
 
-Before you start using these two tools, you should learn about their history. For instance, you should learn exactly
-when the tools were implemented and who initially created them. Next, you can run the {\tt man} command in your terminal
-window and study its output to ensure that you understand the command lines that both tools support. What are the basic
-commands for searching a specific directory with these two tools? Finally, you should type {\tt nautilus} in your
-terminal window to run Ubuntu's graphical file system browser.  How does {\tt nautilus} support file system searching?
-Overall, which tool(s) seem to furnish the most robust set of searching features? Why?
 
-\section*{Experimentally Evaluating File System Searchers}
 
-When you are implementing a large software system, like an operating system or a compiler, it is important for you to have
-the ability to quickly search through a large collection of files for those that contain a specified word or pattern.
-For this part of the laboratory assignment, you should find five separate directories of source code that contain a
-substantial number of files. Next, you should use a Linux command to determine how many files are in each of the chosen
-directories; please make sure that you clearly explain how you counted the total number of files.
-
-The next step in the experimental evaluation of {\tt grep} and {\tt ag} is to devise at least five different command
-lines that you can run for each of the tools. Then, for each of the five commands and the five different directories
-containing code, you should evaluate the efficiency and effectiveness of the tools. In particular, you should evaluate
-the searchers according to the following metrics: (i) the number of results produced, (ii) the usefulness and accuracy
-of the output, and (iii) the speed at which the tools produce their output. When conducting the experiments to evaluate
-efficiency, please run multiple trials and report arithmetic means and standard deviations. After you have completed
-this basic experiment, you should develop and run one additional study. For instance, you could compare the performance
-of file system searchers that are run in both your home account (e.g., {\tt /home/g/gkapfham/}) and on a local disk
-(e.g., the {\tt /tmp} directory on your workstation).
-
-\section*{Analysis of the Searching Results}
-
-Now that you have defined your benchmarks and run your experiments, you should analyze the searching results. Beyond
-identifying which tool is faster and the circumstances in which it is better, you should also aim to explain, whenever
-it is possible to do so, why these results are evident. If you had to pick one of these tools for searching both large
-and small directories of source code, which one would you select? Why? As you complete a report on the results from your
-empirical study, make sure that you give all of the relevant details that would be needed to support the replication of
-your results. Finally, you should comment on whether or not it would be possible to perform the same type of file
-searching with {\tt nautilus}, Ubuntu's graphical file system browser. Please see the instructor if you have questions
-about completing these analysis tasks.
-
-\section*{Advanced Use of File System Searchers}
-
-File system searching tools like {\tt grep} and {\tt ag} have a wide variety of interesting applications.  For instance,
-the Vim text editor can be extended with CTRL-P, a plugin that supports fuzzy file finding.  You can learn more about
-CTRL-P by visiting the following Web site: \url{http://kien.github.io/ctrlp.vim/}. One critique of CTRL-P is that it is
-only fast enough for regular use when it leverages caching.  However, users will often invalidate the CTRL-P cache when
-they create new files, forcing the cache to be rebuilt with a time consuming additional scan. One resolution to this
-problem is to configure CTRL-P to use an external user command such as {\tt ag}.  As such, an example of an advanced use
-of file system searchers that you could report on is the configuration of Vim to use an enhanced version of CTRL-P that
-leverages {\tt ag}. Alternatively, you could install and explain how to use the {\tt ag.vim} plugin that makes it
-possible to run {\tt ag} searches directly from Vim. Since Vim also provides integration with the {\tt grep} command,
-you could explore this advanced feature as well. Students may also look into advanced features that do not involve the
-use of Vim.
-
-\section*{Summary of the Required Deliverables}
+\section*{Final Project Deadlines}
 
 This assignment invites you to submit printed and signed versions of the following deliverables: 
 
@@ -82,27 +29,20 @@ This assignment invites you to submit printed and signed versions of the followi
 
   \itemsep0in
 
-  \item A description of the history, features, and drawbacks associated with {\tt grep}, {\tt ag}, and {\tt nautilus} 
+  \item {\bf Project Assigned:} April 2, 2014
 
-  \item The command lines that you used to run all of your benchmarks with {\tt grep} and {\tt ag} 
+    After meeting with your team members, pick a topic for your final project.  Remember, if you select the
+    student-designed project, you must first have your project verified by the course instructor.
 
-  \item Screenshots demonstrating that you could correctly configure and run {\tt grep}, {\tt ag}, and {\tt nautilus} 
-
-  \item A comprehensive report that explains the results and responds to all of the stated questions 
-
-  \item The source code and/or documentation for an advanced use of the file system searching tools
-
-  \item Ideas for future experiments and analyses that use and evaluate the file system searchers 
-
-  \item A reflective discussion of the challenges that you encountered when completing this assignment
 
 \end{enumerate}
 \vspace*{-.05in}
 
-In adherence to the honor code, students should complete this assignment on an individual basis. While it is appropriate
-for students in this class to have high-level conversations about the assignment, it is necessary to distinguish
-carefully between the student who discusses the principles underlying a problem with others and the student who produces
-assignments that are identical to, or merely variations on, someone else's work.  As such, deliverables that are nearly
-identical to the work of others will be taken as evidence of violating the \mbox{Honor Code}.  
+In adherence to the honor code, students should complete this assignment while only collaborating with those students
+who are a part of their assigned team. While it is appropriate for students in this class to have high-level
+conversations about the assignment with non-team members, it is necessary to distinguish carefully between the team that
+discusses the principles underlying a problem with others and the team that produces an assignment that is identical to,
+or merely variations on, the work on someone not on the team.  As such, deliverables that are nearly identical to the
+work of others will be taken as evidence of violating the \mbox{Honor Code}.  
 
   \end{document}
