Started working on the third examination question.

--- a/exams/exam2_2014.tex
+++ b/exams/exam2_2014.tex
@@ -170,7 +170,10 @@ responsible for checking the white board for status updates.
 
   \begin{enumerate}
 
-    \item ({\bf 2 Points}) 
+    \item ({\bf 2 Points}) What is a page fault? What does an operating system do when one occurs?
+
+    \item ({\bf 2 Points}) The optimal page replacement algorithm is the ``gold standard'' by which other page
+      replacement algorithms are judged.  How does this algorithm work? 
   
   \end{enumerate}
 
