This is the final version of the second examination.

--- a/exams/exam2_2014.tex
+++ b/exams/exam2_2014.tex
@@ -105,8 +105,8 @@ responsible for checking the white board for status updates.
 \begin{enumerate}
   
 \item ({\bf 10 Points}) The memory management unit (MMU) of an operating system controls what parts of a program are in
-  memory and how those programs are accessed.  Answer the following questions about basic memory management operations
-  and trade-offs.
+  memory and how those programs parts are accessed.  Answer the following questions about basic memory management
+  operations and their trade-offs.
   
   \begin{enumerate}
           
@@ -215,9 +215,9 @@ responsible for checking the white board for status updates.
       names.  What is the meaning of these two terms?  Please give an example of each path type and explain what
       indicates that the path is either relative or absolute.
 
-    \item ({\bf 2 Points})  The following line is excerpted from an {\tt /etc/fstab} file.  What is the meaning of these
-      two lines? At minimum, your response to this question should clearly explain the meaning of the terms {\tt
-      /dev/sda1} and {\tt ext4}. \\
+    \item ({\bf 2 Points})  The following line is excerpted from an {\tt /etc/fstab} file on a Linux workstation.  What
+      is the meaning of these two lines? At minimum, your response to this question should clearly explain the meaning
+      of the terms {\tt /dev/sda1} and {\tt ext4}. \\
 
       \hspace*{-.75in}
       \vspace*{1in}
@@ -241,7 +241,7 @@ responsible for checking the white board for status updates.
   \end{figure}
 
 \item ({\bf 10 Points}) The file system must have an efficient implementation of files and directories that supports
-  rapid creation, deletion, and location of files.  Answer the following questions about file system implementation and
+  rapid creation, deletion, and location.  Answer the following questions about file system implementation and
   the use of disk drives.
 
 \begin{enumerate}
