Fixed the problem with the W and M bits for the test.

--- a/exams/exam2_2014.tex
+++ b/exams/exam2_2014.tex
@@ -180,7 +180,7 @@ responsible for checking the white board for status updates.
 
       \begin{itemize} 
         \item $R$: the page was referenced 
-        \item $W$: the page was written
+        \item $M$: the page was modified
       \end{itemize}
   
     The not recently used (NRU) algorithm removes a page at random from the lowest-numbered non-empty class, with the
