Added in the question about deadlocks in an operating system.

--- a/exams/exam3_2014.tex
+++ b/exams/exam3_2014.tex
@@ -278,7 +278,45 @@ responsible for checking the white board for status updates.
 
   \end{enumerate}
 
-\item ({\bf 10 Points}) 
+  \newpage
+
+\item ({\bf 10 Points}) Given the wide variety of different devices, it is important for an operating system to support
+  power management.  Answer the following questions about this topic.
+
+  \begin{enumerate}
+
+    \item ({\bf 4 Points}) Why would it be useful to run a power management module in the operating system that runs
+      either a server or a mobile device? Your response to this question should furnish two reasons for the server and
+      two for the mobile device.
+
+    \item ({\bf 4 Points}) There are many different devices in a modern computation device such as a laptop or a tablet.
+      What are three of the most ``power hungry'' parts of these devices? 
+
+    \item ({\bf 2 Points}) Suppose that you are implementing an operating system's power-management module for the
+      central processing unit (CPU).  What are two strategies that you could implement to reduce the CPU's consumption
+      of power?
+
+  \end{enumerate}
+
+  \newpage
+
+\item ({\bf 10 Points}) An operating system for a multi-processor device often contains algorithms for deadlock
+  detection and avoidance.  Answer the following questions about deadlocks.
+
+  \begin{enumerate}
+
+    \item ({\bf 4 Points}) Coffman et al.\ showed that there are four conditions that must hold for there to be a
+      resource deadlock. What are these four conditions?
+
+    \item ({\bf 4 Points}) It is possible to model the use of resources in a multi-processor operating system with a
+      resource allocation graph (RAG).  What is the meaning of the nodes and edges in a RAG?  How does the structure of
+      the RAG indicate that the operating system is in deadlock? Your response to this question should furnish a
+      graphical depiction of a RAG that shows the evidence of a deadlock.
+
+    \item ({\bf 2 Points}) The ostrich algorithm is one method for managing deadlocks in an operating system.  How does
+      the ostrich algorithm work? What are the benefits of this approach?
+
+  \end{enumerate}
 
 \end{enumerate}
 
