Added in the question about distributed systems.

--- a/exams/exam3_2014.tex
+++ b/exams/exam3_2014.tex
@@ -318,6 +318,22 @@ responsible for checking the white board for status updates.
 
   \end{enumerate}
 
+  \newpage
+
+\item ({\bf 10 Points}) Operating systems also play a major role in the deployment and use of distributed systems.
+  Answer the following questions about distributed systems.
+
+  \begin{enumerate}
+
+    \item ({\bf 4 Points}) Most distributed systems employ a middleware.  What is middleware?
+
+    \item ({\bf 6 Points}) The JavaSpace is an example of a middleware that supports loosely-coupled communication.
+      After describing the three main operations supported by a JavaSpace, your response to this question should explain
+      why the JavaSpace supports loosely-coupled communication. What are the efficiency and effectiveness trade-offs
+      associated with the use of a JavaSpace? Please use a diagram to support all of your points.
+
+  \end{enumerate}
+
 \end{enumerate}
 
 \end{document}
