Fixed the header for the final examination, also revised first question.

--- a/exams/exam3_2014.tex
+++ b/exams/exam3_2014.tex
@@ -86,7 +86,7 @@ showstringspaces=false}
 \begin{center}
 
 CMPSC 440: Operating Systems\\
-Examination Two\\
+Final Examination \\
 %Saturday December 11, 2004 \\
 
 \end{center}
@@ -109,9 +109,21 @@ responsible for checking the white board for status updates.
 
   \begin{enumerate}
 
-    \item ({\bf 4 Points}) There are four events that can lead to the creation of a process. \mbox{What are they}?
+    \item ({\bf 5 Points}) In order to manage the execution of a process, an operating system must contain a wide
+      variety of software components and leverage different types of hardware.  Draw a complete diagram of an operating
+      system that graphically depicts:
 
-    \item ({\bf 4 Points}) A process can be in one of three states: running, blocked, and ready. Using circles to
+      \begin{enumerate}
+
+        \item The operating system kernel
+        \item The existence of user programs
+        \item The hardware of a modern computer
+        \item The interface between the hardware and software
+        \item The interaction between kernel and user programs
+
+      \end{enumerate}
+
+    \item ({\bf 3 Points}) A process can be in one of three states: running, blocked, and ready. Using circles to
       represent each of these states and directed edges to denote transitions between these states, draw a process-state
       diagram. All states and edges must have labels.
 
