--- a/exams/exam3_2014.tex
+++ b/exams/exam3_2014.tex
@@ -294,9 +294,13 @@ responsible for checking the white board for status updates.
 
   \begin{enumerate}
 
-    \item ({\bf 4 Points}) Operating systems commonly support both sequential-access and random-access files.  What is
-      the meaning of these two terms?  What type of file would a database management system use to store its contents?
-      Why?
+    % \item ({\bf 4 Points}) Operating systems commonly support both sequential-access and random-access files.  What is
+    %   the meaning of these two terms?  What type of file would a database management system use to store its contents?
+    %   Why?
+
+    \item ({\bf 4 Points}) File system traversal involves the automated visitation of all of the files and directories
+      in a specified region of the file system. Using either Java source code or pseudo code, implement a complete file
+      system traversal method.
 
     \item ({\bf 4 Points}) A file system often supports navigation of directories with both relative and absolute path
       names.  What is the meaning of these two terms?  Please give an example of each path type and explain what
@@ -327,34 +331,34 @@ responsible for checking the white board for status updates.
     \label{fig:fat}
   \end{figure}
 
-\item ({\bf 10 Points}) The file system must have an efficient implementation of files and directories that supports
-  rapid creation, deletion, and location.  Answer the following questions about file system implementation and
-  the use of disk drives.
-
-\begin{enumerate}
-
-  \item ({\bf 5 Points}) Figure~\ref{fig:fat} shows one example of a structure that a file system can use to manage
-    files.  What is the name of this structure? How does a file system use this structure to find files?  What are the
-    drawbacks associated with this approach?
-
-  \item ({\bf 3 Points}) Certain file systems, such as NTFS, provide support for journaling.  What is a
-    journaling file system?  What are the benefits and drawbacks associated with journals?
-
-  \item ({\bf 2 Points}) It is possible to have a file system run on a solid-state drive (SSD).  What is an SSD?  What
-    are the benefits associated with the use of SSDs? 
-
-\end{enumerate}
-
-\newpage
+% \item ({\bf 10 Points}) The file system must have an efficient implementation of files and directories that supports
+%   rapid creation, deletion, and location.  Answer the following questions about file system implementation and
+%   the use of disk drives.
+% 
+% \begin{enumerate}
+% 
+%   \item ({\bf 5 Points}) Figure~\ref{fig:fat} shows one example of a structure that a file system can use to manage
+%     files.  What is the name of this structure? How does a file system use this structure to find files?  What are the
+%     drawbacks associated with this approach?
+% 
+%   \item ({\bf 3 Points}) Certain file systems, such as NTFS, provide support for journaling.  What is a
+%     journaling file system?  What are the benefits and drawbacks associated with journals?
+% 
+%   \item ({\bf 2 Points}) It is possible to have a file system run on a solid-state drive (SSD).  What is an SSD?  What
+%     are the benefits associated with the use of SSDs? 
+% 
+% \end{enumerate}
+% 
+% \newpage
 
 \item ({\bf 10 Points}) Computer hardware contains a wide variety of input/output devices that the operating system must
   manage.  Answer the following questions about these devices.
 
   \begin{enumerate}
 
-    \item ({\bf 4 Points}) A computer can contain by volatile and non-volatile memory.  What are the similarities and
-      differences between these two types of memory?  Please give a situation in which it would be advisable to use each
-      type of memory.
+    \item ({\bf 4 Points}) A computer system can contain by volatile and non-volatile memory.  What are the similarities
+      and differences between these two types of memory?  Please give a situation in which it would be advisable to use
+      each type of memory.
 
     \item ({\bf 3 Points}) Many operating systems, like GNU/Linux, support the X Windows System.  What role do the X
       client, X server, and the X protocol have in running an interface?
