Removed the figure that is no longer needed, fixed question introduction.

--- a/exams/exam3_2014.tex
+++ b/exams/exam3_2014.tex
@@ -323,13 +323,13 @@ responsible for checking the white board for status updates.
 
   \newpage
 
-  \begin{figure}[p]
-    \centering
-    \includegraphics{fig412}
-    \vspace*{-6.75in}
-    \caption{A Structure for File Management.}
-    \label{fig:fat}
-  \end{figure}
+  % \begin{figure}[p]
+  %   \centering
+  %   \includegraphics{fig412}
+  %   \vspace*{-6.75in}
+  %   \caption{A Structure for File Management.}
+  %   \label{fig:fat}
+  % \end{figure}
 
 % \item ({\bf 10 Points}) The file system must have an efficient implementation of files and directories that supports
 %   rapid creation, deletion, and location.  Answer the following questions about file system implementation and
@@ -356,9 +356,9 @@ responsible for checking the white board for status updates.
 
   \begin{enumerate}
 
-    \item ({\bf 4 Points}) A computer system can contain by volatile and non-volatile memory.  What are the similarities
-      and differences between these two types of memory?  Please give a situation in which it would be advisable to use
-      each type of memory.
+    \item ({\bf 4 Points}) A computer system can contain both volatile and non-volatile memory.  What are the
+      similarities and differences between these two types of memory?  Please give a situation in which it would be
+      advisable to use each type of memory.
 
     \item ({\bf 3 Points}) Many operating systems, like GNU/Linux, support the X Windows System.  What role do the X
       client, X server, and the X protocol have in running an interface?
@@ -371,8 +371,8 @@ responsible for checking the white board for status updates.
 
   \newpage
 
-\item ({\bf 10 Points}) Given the wide variety of different devices, it is important for an operating system to support
-  power management.  Answer the following questions about this topic.
+\item ({\bf 10 Points}) Given the high cost of electricity and batteries, it is important for an operating system to
+  support power management.  Answer the following questions about this topic.
 
   \begin{enumerate}
 
