Current final draft of the final examination. Few more changes.

--- a/exams/exam3_2014.tex
+++ b/exams/exam3_2014.tex
@@ -380,8 +380,8 @@ responsible for checking the white board for status updates.
       either a server or a mobile device? Your response to this question should furnish two reasons for the server and
       two for the mobile device.
 
-    \item ({\bf 4 Points}) There are many different devices in a modern computation device such as a laptop or a tablet.
-      What are three of the most ``power hungry'' parts of these devices? 
+    \item ({\bf 4 Points}) There are many different components of a computation device such as a laptop or a
+      tablet.  What are three of the most ``power hungry'' parts of these devices? 
 
     \item ({\bf 2 Points}) Suppose that you are implementing an operating system's power-management module for the
       central processing unit (CPU).  What are two strategies that you could implement to reduce the CPU's consumption
@@ -400,9 +400,9 @@ responsible for checking the white board for status updates.
       resource deadlock. What are these four conditions?
 
     \item ({\bf 4 Points}) It is possible to model the use of resources in a multi-processor operating system with a
-      resource allocation graph (RAG).  What is the meaning of the nodes and edges in a RAG?  How does the structure of
-      the RAG indicate that the operating system is in deadlock? Your response to this question should furnish a
-      graphical depiction of a RAG that shows the evidence of a deadlock.
+      resource allocation graph (RAG).  What is the meaning of the nodes and the edges in a RAG?  How does the structure
+      of the RAG indicate that the operating system is in deadlock? Your response to this question should furnish a
+      graphical depiction of a RAG that shows the evidence of a system in deadlock.
 
     \item ({\bf 2 Points}) The ostrich algorithm is one method for managing deadlocks in an operating system.  How does
       the ostrich algorithm work? What are the benefits of this approach?
